--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,8 +1,8 @@
 {
     "name": "الاسم",
-    "email": "الايميل",
-    "password": "كلمة السر",
-    "role": "role",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "role": "الدور",
     "categories": "الأقسام",
     "title": "العنوان",
     "content": "المحتوى",
@@ -11,63 +11,88 @@
     "number of questions": "عدد الأسئلة",
     "yes": "نعم",
     "no": "لا",
-    "import questions": "استيراد أسئلة",
-    "excel file (.xlsx)": "excel file (xlsx)",
-    "questions imported successfully": "أسئلة تم استيرادها بنجاح",
-    "question": "سؤال",
-    "questions": "الاسئلة",
-    "#id": "#id",
-    "answer": "إجابة",
-    "level": "مستوى",
+    "import questions": "استيراد الأسئلة",
+    "excel file (.xlsx)": "ملف إكسل (xlsx)",
+    "Questions import has been queued": "تمت إضافة استيراد الأسئلة إلى قائمة الانتظار",
+    "questions imported successfully": "تم استيراد الأسئلة بنجاح",
+    "question": "السؤال",
+    "questions": "الأسئلة",
+    "#id": "#معرف",
+    "answer": "الإجابة",
+    "level": "المستوى",
     "easy": "سهل",
     "medium": "متوسط",
     "hard": "صعب",
-    "unknown": "مجهول",
-    "users": "users",
+    "unknown": "غير معروف",
     "packages": "الباقات",
-    "package": "باقة",
+    "package": "الباقة",
     "games count": "عدد الألعاب",
-    "price": "سعر",
-    "kwd": "د.ك",
-    "description": "وصف",
-    "games_count": "عددالألعاب",
+    "price": "السعر",
+    "kwd": "دينار كويتي",
+    "description": "الوصف",
+    "games_count": "عدد الألعاب",
+    "user": "المستخدم",
+    "payment status": "حالة الدفع",
+    "transaction time": "وقت المعاملة",
+    "feedback": "التغذية الراجعة",
+    "provided on": "مقدم في",
     "general": "عام",
     "difficulty level": "مستوى الصعوبة",
     "category": "الفئة",
     "difference": "فرق السنوات",
     "question text": "نص السؤال",
-    "question media": "question media",
-    "answer text": "نص الاجابة",
-    "answer media": "answer media",
-    "id": "id",
-    "customers": "المستخدمين",
-    "label": "العنوان",
-    "user info": "user info",
-    "type": "النوع",
+    "question media": "وسائط السؤال",
+    "answer text": "نص الإجابة",
+    "answer media": "وسائط الإجابة",
+    "id": "المعرف",
+    "column mappings": "تعيين الأعمدة",
+    "Import job ID: {$jobId}. You will receive an email notification when the import is complete.": "معرف استيراد المهمة: {$jobId}. سوف تتلقى إشعارًا بالبريد الإلكتروني عند اكتمال الاستيراد.",
+    "Failed to queue questions import": "فشل في إضافة استيراد الأسئلة إلى قائمة الانتظار",
+    "An error occurred while trying to queue the import job. Please try again or contact support.": "حدث خطأ أثناء محاولة إضافة استيراد المهمة إلى قائمة الانتظار. يرجى المحاولة مرة أخرى أو الاتصال بالدعم.",
+    "customers": "العملاء",
     "phone": "الهاتف",
-    "is active": "is active",
-    "updated successfully": "updated successfully",
-    "error, try again later": "error, try again later",
-    "invalid category id": "invalid category id",
-    "invalid package id": "invalid package id",
-    "invalid request id": "invalid request id",
-    "invalid transaction id": "invalid transaction id",
-    "paid successfully": "paid successfully",
-    "payment failed": "payment failed",
-    "KD": "د.ك",
-    "is_active": "حالة الحساب",
+    "is active": "نشط",
+    "game credits": "رصيد الألعاب",
+    "credits amount": "كمية الرصيد",
+    "user games credit updated": "تم تحديث رصيد ألعاب المستخدم",
+    "Game credits amount": "كمية رصيد الألعاب",
+    "transaction id": "معرف المعاملة",
+    "amount": "المبلغ",
+    "type": "النوع",
+    "deposit": "إيداع",
+    "withdraw": "سحب",
+    "KD": "دينار كويتي",
+    "Total Earnings": "إجمالي الأرباح",
+    "users": "المستخدمين",
+    "updated successfully": "تم التحديث بنجاح",
+    "error, try again later": "خطأ، يرجى المحاولة لاحقًا",
+    "invalid category id": "معرف الفئة غير صالح",
+    "games": "الألعاب",
+    "invalid game id": "معرف اللعبة غير صالح",
+    "invalid package id": "معرف الباقة غير صالح",
+    "invalid request id": "معرف الطلب غير صالح",
+    "invalid purchase id": "معرف الشراء غير صالح",
+    "payment already processed": "تمت معالجة الدفع مسبقًا",
+    "paid successfully": "تم الدفع بنجاح",
+    "payment failed": "فشل الدفع",
+    "validation failed": "فشل التحقق",
+    "feedback submitted successfully": "تم تقديم التغذية الراجعة بنجاح",
+    "label": "الملصق",
+    "user info": "معلومات المستخدم",
+    "invalid transaction id": "معرف المعاملة غير صالح",
+    "is_active": "الحالة نشط",
     "upload media": "تحميل الوسائط",
-    "Question Media": "استجواب وسائل الإعلام",
-    "Answer Media": "الإجابة على وسائل الإعلام",
-    "question media type": "نوع السؤال",
+    "Question Media": "وسائط السؤال",
+    "Answer Media": "وسائط الإجابة",
+    "question media type": "نوع وسائط السؤال",
     "text": "نص",
     "video": "فيديو",
     "audio": "صوتي",
-    "answer media type": "نوع الاجابة",
+    "answer media type": "نوع وسائط الإجابة",
     "permenant category": "فئة دائمة",
     "is temp": "فئة مؤقتة",
-    "parent category": "القسم الرئيسي",
-    "no Parent": "-",
-    "User Info": "بيانات المستخدم",
+    "parent category": "الفئة الرئيسية",
+    "no Parent": "لا يوجد",
+    "User Info": "معلومات المستخدم",
     "delete": "حذف"
 }
