--- a/lang/en.json
+++ b/lang/en.json
@@ -13,6 +13,7 @@
     "no": "No",
     "import questions": "Import Questions",
     "excel file (.xlsx)": "Excel File (.Xlsx)",
+    "Questions import has been queued": "Questions import has been queued",
     "questions imported successfully": "Questions Imported Successfully",
     "question": "Question",
     "questions": "Questions",
@@ -23,7 +24,6 @@
     "medium": "Medium",
     "hard": "Hard",
     "unknown": "Unknown",
-    "users": "users",
     "packages": "Packages",
     "package": "Package",
     "games count": "Games Count",
@@ -31,31 +31,55 @@
     "kwd": "Kwd",
     "description": "Description",
     "games_count": "Games Count",
+    "user": "user",
+    "payment status": "payment status",
+    "transaction time": "transaction time",
+    "feedback": "feedback",
+    "provided on": "provided on",
     "general": "General",
     "difficulty level": "Difficulty Level",
     "category": "Category",
-    "diff": "Years Difference",
     "difference": "Difference",
     "question text": "Question Text",
     "question media": "question media",
     "answer text": "Answer Text",
     "answer media": "answer media",
     "id": "id",
+    "column mappings": "column mappings",
+    "Import job ID: {$jobId}. You will receive an email notification when the import is complete.": "Import job ID: {$jobId}. You will receive an email notification when the import is complete.",
+    "Failed to queue questions import": "Failed to queue questions import",
     "customers": "Customers",
-    "label": "Label",
-    "user info": "User Info",
-    "type": "Type",
     "phone": "Phone",
     "is active": "is active",
+    "game credits": "game credits",
+    "credits amount": "credits amount",
+    "user games credit updated": "user games credit updated",
+    "Game credits amount": "Game credits amount",
+    "transaction id": "transaction id",
+    "amount": "amount",
+    "type": "Type",
+    "deposit": "deposit",
+    "withdraw": "withdraw",
+    "KD": "KD",
+    "Total Earnings": "Total Earnings",
+    "users": "users",
     "updated successfully": "updated successfully",
     "error, try again later": "error, try again later",
     "invalid category id": "invalid category id",
+    "games": "games",
+    "invalid game id": "invalid game id",
     "invalid package id": "invalid package id",
     "invalid request id": "invalid request id",
-    "invalid transaction id": "invalid transaction id",
+    "invalid purchase id": "invalid purchase id",
+    "payment already processed": "payment already processed",
     "paid successfully": "paid successfully",
     "payment failed": "payment failed",
-    "KD": "KD",
+    "validation failed": "validation failed",
+    "feedback submitted successfully": "feedback submitted successfully",
+    "diff": "Years Difference",
+    "label": "Label",
+    "user info": "User Info",
+    "invalid transaction id": "invalid transaction id",
     "is_active": "Is_Active",
     "upload media": "Upload Media",
     "Question Media": "Question Media",
