--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,4 +1,15 @@
 {
+    "save": "يحفظ",
+    "settings": "إعدادات",
+    "logo": "شعار",
+    "favicon": "فافيكون",
+    "test mode": "وضع الاختبار",
+    "secret key": "المفتاح السري",
+    "Game Settings": "إعدادات اللعبة",
+    "win sound effect": "اربح تأثير سليم",
+    "lose sound effect": "تفقد تأثير الصوت",
+    "success": "نجاح",
+    "settings updated successfully": "تحديث الإعدادات بنجاح",
     "name": "الاسم",
     "email": "البريد الإلكتروني",
     "password": "كلمة المرور",
@@ -11,10 +22,6 @@
     "number of questions": "عدد الأسئلة",
     "yes": "نعم",
     "no": "لا",
-    "import questions": "استيراد الأسئلة",
-    "excel file (.xlsx)": "ملف إكسل (xlsx)",
-    "Questions import has been queued": "تمت إضافة استيراد الأسئلة إلى قائمة الانتظار",
-    "questions imported successfully": "تم استيراد الأسئلة بنجاح",
     "question": "السؤال",
     "questions": "الأسئلة",
     "#id": "#معرف",
@@ -24,6 +31,18 @@
     "medium": "متوسط",
     "hard": "صعب",
     "unknown": "غير معروف",
+    "coupon code": "رمز القسيمة",
+    "max uses per user": "يستخدم Max لكل مستخدم",
+    "max users": "مستخدمي أقصى",
+    "leave empty for unlimited users": "اترك فارغًا للمستخدمين غير المحدودين",
+    "expiration date": "تاريخ انتهاء الصلاحية",
+    "leave empty for no expiration": "اترك فارغًا لعدم انتهاء الصلاحية",
+    "max uses\/user": "Max يستخدم \/المستخدم",
+    "unlimited": "غير محدود",
+    "total uses": "الاستخدامات الكلية",
+    "expires at": "تنتهي في",
+    "active": "نشيط",
+    "created at": "تم إنشاؤها في",
     "packages": "الباقات",
     "package": "الباقة",
     "games count": "عدد الألعاب",
@@ -31,6 +50,13 @@
     "kwd": "دينار كويتي",
     "description": "الوصف",
     "games_count": "عدد الألعاب",
+    "page": "page",
+    "pages": "pages",
+    "slug": "slug",
+    "is published": "is published",
+    "created_at": "created_at",
+    "updated_at": "updated_at",
+    "published": "published",
     "user": "المستخدم",
     "payment status": "حالة الدفع",
     "transaction time": "وقت المعاملة",
@@ -45,13 +71,29 @@
     "answer text": "نص الإجابة",
     "answer media": "وسائط الإجابة",
     "id": "المعرف",
+    "import questions": "استيراد الأسئلة",
     "column mappings": "تعيين الأعمدة",
+    "Questions import has been queued": "تمت إضافة استيراد الأسئلة إلى قائمة الانتظار",
     "Import job ID: {$jobId}. You will receive an email notification when the import is complete.": "معرف استيراد المهمة: {$jobId}. سوف تتلقى إشعارًا بالبريد الإلكتروني عند اكتمال الاستيراد.",
     "Failed to queue questions import": "فشل في إضافة استيراد الأسئلة إلى قائمة الانتظار",
     "An error occurred while trying to queue the import job. Please try again or contact support.": "حدث خطأ أثناء محاولة إضافة استيراد المهمة إلى قائمة الانتظار. يرجى المحاولة مرة أخرى أو الاتصال بالدعم.",
     "customers": "العملاء",
     "phone": "الهاتف",
-    "is active": "نشط",
+    "username": "اسم المستخدم",
+    "date of birth": "تاريخ الميلاد",
+    "Gender": "جنس",
+    "Male": "ذكر",
+    "Female": "أنثى",
+    "country": "دولة",
+    "kuwait": "الكويت",
+    "saudi arabia": "المملكة العربية السعودية",
+    "united arab emirates": "الإمارات العربية المتحدة",
+    "qatar": "قطر",
+    "oman": "عمان",
+    "bahrain": "البحرين",
+    "points": "نقاط",
+    "phone verified": "تم التحقق من الهاتف",
+    "verified": "تم التحقق منها",
     "game credits": "رصيد الألعاب",
     "credits amount": "كمية الرصيد",
     "user games credit updated": "تم تحديث رصيد ألعاب المستخدم",
@@ -64,8 +106,19 @@
     "KD": "دينار كويتي",
     "Total Earnings": "إجمالي الأرباح",
     "users": "المستخدمين",
+    "not authorized": "not authorized",
     "updated successfully": "تم التحديث بنجاح",
     "error, try again later": "خطأ، يرجى المحاولة لاحقًا",
+    "user created successfully": "تم إنشاء المستخدم بنجاح",
+    "please verify your phone number": "يرجى التحقق من رقم هاتفك",
+    "invalid username or password": "اسم مستخدم غير صالح أو كلمة مرور",
+    "phone number is not verified": "لم يتم التحقق من رقم الهاتف",
+    "phone number not registered": "رقم الهاتف غير مسجل",
+    "phone number verified successfully": "تم التحقق من رقم الهاتف بنجاح",
+    "phone number is already verified": "تم التحقق بالفعل من رقم الهاتف",
+    "failed to send otp": "فشل في إرسال OTP",
+    "verification code has been resent": "تم استياء رمز التحقق",
+    "google login successful": "جوجل تسجيل الدخول الناجح",
     "invalid category id": "معرف الفئة غير صالح",
     "games": "الألعاب",
     "invalid game id": "معرف اللعبة غير صالح",
@@ -75,8 +128,12 @@
     "payment already processed": "تمت معالجة الدفع مسبقًا",
     "paid successfully": "تم الدفع بنجاح",
     "payment failed": "فشل الدفع",
+    "page not found": "الصفحة لم يتم العثور عليها",
     "validation failed": "فشل التحقق",
     "feedback submitted successfully": "تم تقديم التغذية الراجعة بنجاح",
+    "excel file (.xlsx)": "ملف إكسل (xlsx)",
+    "questions imported successfully": "تم استيراد الأسئلة بنجاح",
+    "is active": "نشط",
     "label": "الملصق",
     "user info": "معلومات المستخدم",
     "invalid transaction id": "معرف المعاملة غير صالح",
