--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,16 @@
 {
+    "save": "save",
+    "settings": "settings",
+    "logo": "logo",
+    "favicon": "favicon",
+    "test mode": "test mode",
+    "secret key": "secret key",
+    "Game Settings": "Game Settings",
+    "win sound effect": "win sound effect",
+    "lose sound effect": "lose sound effect",
+    "success": "success",
+    "settings updated successfully": "settings updated successfully",
+    "filament-shield::filament-shield.nav.group": "filament-shield::filament-shield.nav.group",
     "name": "Name",
     "email": "Email",
     "password": "Password",
@@ -11,10 +23,6 @@
     "number of questions": "Number Of Questions",
     "yes": "Yes",
     "no": "No",
-    "import questions": "Import Questions",
-    "excel file (.xlsx)": "Excel File (.Xlsx)",
-    "Questions import has been queued": "Questions import has been queued",
-    "questions imported successfully": "Questions Imported Successfully",
     "question": "Question",
     "questions": "Questions",
     "#id": "#Id",
@@ -24,6 +32,18 @@
     "medium": "Medium",
     "hard": "Hard",
     "unknown": "Unknown",
+    "coupon code": "coupon code",
+    "max uses per user": "max uses per user",
+    "max users": "max users",
+    "leave empty for unlimited users": "leave empty for unlimited users",
+    "expiration date": "expiration date",
+    "leave empty for no expiration": "leave empty for no expiration",
+    "max uses\/user": "max uses\/user",
+    "unlimited": "unlimited",
+    "total uses": "total uses",
+    "expires at": "expires at",
+    "active": "active",
+    "created at": "created at",
     "packages": "Packages",
     "package": "Package",
     "games count": "Games Count",
@@ -31,6 +51,13 @@
     "kwd": "Kwd",
     "description": "Description",
     "games_count": "Games Count",
+    "page": "page",
+    "pages": "pages",
+    "slug": "slug",
+    "is published": "is published",
+    "created_at": "created_at",
+    "updated_at": "updated_at",
+    "published": "published",
     "user": "user",
     "payment status": "payment status",
     "transaction time": "transaction time",
@@ -45,12 +72,45 @@
     "answer text": "Answer Text",
     "answer media": "answer media",
     "id": "id",
+    "import questions": "Import Questions",
     "column mappings": "column mappings",
+    "Questions import has been queued": "Questions import has been queued",
     "Import job ID: {$jobId}. You will receive an email notification when the import is complete.": "Import job ID: {$jobId}. You will receive an email notification when the import is complete.",
     "Failed to queue questions import": "Failed to queue questions import",
+    "An error occurred while trying to queue the import job. Please try again or contact support.": "An error occurred while trying to queue the import job. Please try again or contact support.",
+    "filament-shield::filament-shield.field.name": "filament-shield::filament-shield.field.name",
+    "filament-shield::filament-shield.field.guard_name": "filament-shield::filament-shield.field.guard_name",
+    "filament-shield::filament-shield.field.select_all.name": "filament-shield::filament-shield.field.select_all.name",
+    "filament-shield::filament-shield.field.select_all.message": "filament-shield::filament-shield.field.select_all.message",
+    "filament-shield::filament-shield.column.name": "filament-shield::filament-shield.column.name",
+    "filament-shield::filament-shield.column.guard_name": "filament-shield::filament-shield.column.guard_name",
+    "filament-shield::filament-shield.column.permissions": "filament-shield::filament-shield.column.permissions",
+    "filament-shield::filament-shield.column.updated_at": "filament-shield::filament-shield.column.updated_at",
+    "filament-shield::filament-shield.resource.label.role": "filament-shield::filament-shield.resource.label.role",
+    "filament-shield::filament-shield.resource.label.roles": "filament-shield::filament-shield.resource.label.roles",
+    "filament-shield::filament-shield.nav.role.label": "filament-shield::filament-shield.nav.role.label",
+    "filament-shield::filament-shield.nav.role.icon": "filament-shield::filament-shield.nav.role.icon",
+    "filament-shield::filament-shield.resources": "filament-shield::filament-shield.resources",
+    "filament-shield::filament-shield.pages": "filament-shield::filament-shield.pages",
+    "filament-shield::filament-shield.widgets": "filament-shield::filament-shield.widgets",
+    "filament-shield::filament-shield.custom": "filament-shield::filament-shield.custom",
     "customers": "Customers",
     "phone": "Phone",
-    "is active": "is active",
+    "username": "username",
+    "date of birth": "date of birth",
+    "Gender": "Gender",
+    "Male": "Male",
+    "Female": "Female",
+    "country": "country",
+    "kuwait": "kuwait",
+    "saudi arabia": "saudi arabia",
+    "united arab emirates": "united arab emirates",
+    "qatar": "qatar",
+    "oman": "oman",
+    "bahrain": "bahrain",
+    "points": "points",
+    "phone verified": "phone verified",
+    "verified": "verified",
     "game credits": "game credits",
     "credits amount": "credits amount",
     "user games credit updated": "user games credit updated",
@@ -63,8 +123,19 @@
     "KD": "KD",
     "Total Earnings": "Total Earnings",
     "users": "users",
+    "not authorized": "not authorized",
     "updated successfully": "updated successfully",
     "error, try again later": "error, try again later",
+    "user created successfully": "user created successfully",
+    "please verify your phone number": "please verify your phone number",
+    "invalid username or password": "invalid username or password",
+    "phone number is not verified": "phone number is not verified",
+    "phone number not registered": "phone number not registered",
+    "phone number verified successfully": "phone number verified successfully",
+    "phone number is already verified": "phone number is already verified",
+    "failed to send otp": "failed to send otp",
+    "verification code has been resent": "verification code has been resent",
+    "google login successful": "google login successful",
     "invalid category id": "invalid category id",
     "games": "games",
     "invalid game id": "invalid game id",
@@ -74,8 +145,12 @@
     "payment already processed": "payment already processed",
     "paid successfully": "paid successfully",
     "payment failed": "payment failed",
+    "page not found": "page not found",
     "validation failed": "validation failed",
     "feedback submitted successfully": "feedback submitted successfully",
+    "excel file (.xlsx)": "Excel File (.Xlsx)",
+    "questions imported successfully": "Questions Imported Successfully",
+    "is active": "is active",
     "diff": "Years Difference",
     "label": "Label",
     "user info": "User Info",
