--- a/lang/en.json
+++ b/lang/en.json
@@ -1,20 +1,19 @@
 {
-    "save": "save",
-    "settings": "settings",
-    "logo": "logo",
-    "favicon": "favicon",
-    "test mode": "test mode",
-    "secret key": "secret key",
+    "save": "Save",
+    "settings": "Settings",
+    "logo": "Logo",
+    "favicon": "Favicon",
+    "test mode": "Test Mode",
+    "secret key": "Secret Key",
     "Game Settings": "Game Settings",
-    "win sound effect": "win sound effect",
-    "lose sound effect": "lose sound effect",
-    "success": "success",
-    "settings updated successfully": "settings updated successfully",
-    "filament-shield::filament-shield.nav.group": "filament-shield::filament-shield.nav.group",
+    "win sound effect": "Win Sound Effect",
+    "lose sound effect": "Lose Sound Effect",
+    "success": "Success",
+    "settings updated successfully": "Settings Updated Successfully",
     "name": "Name",
     "email": "Email",
     "password": "Password",
-    "role": "role",
+    "role": "Role",
     "categories": "Categories",
     "title": "Title",
     "content": "Content",
@@ -32,18 +31,18 @@
     "medium": "Medium",
     "hard": "Hard",
     "unknown": "Unknown",
-    "coupon code": "coupon code",
-    "max uses per user": "max uses per user",
-    "max users": "max users",
-    "leave empty for unlimited users": "leave empty for unlimited users",
-    "expiration date": "expiration date",
-    "leave empty for no expiration": "leave empty for no expiration",
-    "max uses\/user": "max uses\/user",
-    "unlimited": "unlimited",
-    "total uses": "total uses",
-    "expires at": "expires at",
-    "active": "active",
-    "created at": "created at",
+    "coupon code": "Coupon Code",
+    "max uses per user": "Max Uses Per User",
+    "max users": "Max Users",
+    "leave empty for unlimited users": "Leave Empty For Unlimited Users",
+    "expiration date": "Expiration Date",
+    "leave empty for no expiration": "Leave Empty For No Expiration",
+    "max uses\/user": "Max Uses\/User",
+    "unlimited": "Unlimited",
+    "total uses": "Total Uses",
+    "expires at": "Expires At",
+    "active": "Active",
+    "created at": "Created At",
     "packages": "Packages",
     "package": "Package",
     "games count": "Games Count",
@@ -51,110 +50,94 @@
     "kwd": "Kwd",
     "description": "Description",
     "games_count": "Games Count",
-    "page": "page",
-    "pages": "pages",
-    "slug": "slug",
-    "is published": "is published",
-    "created_at": "created_at",
-    "updated_at": "updated_at",
-    "published": "published",
-    "user": "user",
-    "payment status": "payment status",
-    "transaction time": "transaction time",
-    "feedback": "feedback",
-    "provided on": "provided on",
+    "page": "Page",
+    "pages": "Pages",
+    "slug": "Slug",
+    "is published": "Is Published",
+    "created_at": "Created_At",
+    "updated_at": "Updated_At",
+    "published": "Published",
+    "user": "User",
+    "payment status": "Payment Status",
+    "transaction time": "Transaction Time",
+    "feedback": "Feedback",
+    "provided on": "Provided On",
     "general": "General",
     "difficulty level": "Difficulty Level",
     "category": "Category",
     "difference": "Difference",
     "question text": "Question Text",
-    "question media": "question media",
+    "question media": "Question Media",
     "answer text": "Answer Text",
-    "answer media": "answer media",
-    "id": "id",
+    "answer media": "Answer Media",
+    "id": "Id",
     "import questions": "Import Questions",
-    "column mappings": "column mappings",
-    "Questions import has been queued": "Questions import has been queued",
-    "Import job ID: {$jobId}. You will receive an email notification when the import is complete.": "Import job ID: {$jobId}. You will receive an email notification when the import is complete.",
-    "Failed to queue questions import": "Failed to queue questions import",
-    "An error occurred while trying to queue the import job. Please try again or contact support.": "An error occurred while trying to queue the import job. Please try again or contact support.",
-    "filament-shield::filament-shield.field.name": "filament-shield::filament-shield.field.name",
-    "filament-shield::filament-shield.field.guard_name": "filament-shield::filament-shield.field.guard_name",
-    "filament-shield::filament-shield.field.select_all.name": "filament-shield::filament-shield.field.select_all.name",
-    "filament-shield::filament-shield.field.select_all.message": "filament-shield::filament-shield.field.select_all.message",
-    "filament-shield::filament-shield.column.name": "filament-shield::filament-shield.column.name",
-    "filament-shield::filament-shield.column.guard_name": "filament-shield::filament-shield.column.guard_name",
-    "filament-shield::filament-shield.column.permissions": "filament-shield::filament-shield.column.permissions",
-    "filament-shield::filament-shield.column.updated_at": "filament-shield::filament-shield.column.updated_at",
-    "filament-shield::filament-shield.resource.label.role": "filament-shield::filament-shield.resource.label.role",
-    "filament-shield::filament-shield.resource.label.roles": "filament-shield::filament-shield.resource.label.roles",
-    "filament-shield::filament-shield.nav.role.label": "filament-shield::filament-shield.nav.role.label",
-    "filament-shield::filament-shield.nav.role.icon": "filament-shield::filament-shield.nav.role.icon",
-    "filament-shield::filament-shield.resources": "filament-shield::filament-shield.resources",
-    "filament-shield::filament-shield.pages": "filament-shield::filament-shield.pages",
-    "filament-shield::filament-shield.widgets": "filament-shield::filament-shield.widgets",
-    "filament-shield::filament-shield.custom": "filament-shield::filament-shield.custom",
+    "column mappings": "Column Mappings",
+    "Questions import has been queued": "Questions Import Has Been Queued",
+    "Import job ID: {$jobId}. You will receive an email notification when the import is complete.": "Import Job Id: {$Jobid}. You Will Receive An Email Notification When The Import Is Complete.",
+    "Failed to queue questions import": "Failed To Queue Questions Import",
+    "An error occurred while trying to queue the import job. Please try again or contact support.": "An Error Occurred While Trying To Queue The Import Job. Please Try Again Or Contact Support.",
     "customers": "Customers",
     "phone": "Phone",
-    "username": "username",
-    "date of birth": "date of birth",
+    "username": "Username",
+    "date of birth": "Date Of Birth",
     "Gender": "Gender",
     "Male": "Male",
     "Female": "Female",
-    "country": "country",
-    "kuwait": "kuwait",
-    "saudi arabia": "saudi arabia",
-    "united arab emirates": "united arab emirates",
-    "qatar": "qatar",
-    "oman": "oman",
-    "bahrain": "bahrain",
-    "points": "points",
-    "phone verified": "phone verified",
-    "verified": "verified",
-    "game credits": "game credits",
-    "credits amount": "credits amount",
-    "user games credit updated": "user games credit updated",
-    "Game credits amount": "Game credits amount",
-    "transaction id": "transaction id",
-    "amount": "amount",
+    "country": "Country",
+    "kuwait": "Kuwait",
+    "saudi arabia": "Saudi Arabia",
+    "united arab emirates": "United Arab Emirates",
+    "qatar": "Qatar",
+    "oman": "Oman",
+    "bahrain": "Bahrain",
+    "points": "Points",
+    "phone verified": "Phone Verified",
+    "verified": "Verified",
+    "game credits": "Game Credits",
+    "credits amount": "Credits Amount",
+    "user games credit updated": "User Games Credit Updated",
+    "Game credits amount": "Game Credits Amount",
+    "transaction id": "Transaction Id",
+    "amount": "Amount",
     "type": "Type",
-    "deposit": "deposit",
-    "withdraw": "withdraw",
-    "KD": "KD",
+    "deposit": "Deposit",
+    "withdraw": "Withdraw",
+    "KD": "Kd",
     "Total Earnings": "Total Earnings",
-    "users": "users",
-    "not authorized": "not authorized",
-    "updated successfully": "updated successfully",
-    "error, try again later": "error, try again later",
-    "user created successfully": "user created successfully",
-    "please verify your phone number": "please verify your phone number",
-    "invalid username or password": "invalid username or password",
-    "phone number is not verified": "phone number is not verified",
-    "phone number not registered": "phone number not registered",
-    "phone number verified successfully": "phone number verified successfully",
-    "phone number is already verified": "phone number is already verified",
-    "failed to send otp": "failed to send otp",
-    "verification code has been resent": "verification code has been resent",
-    "google login successful": "google login successful",
-    "invalid category id": "invalid category id",
-    "games": "games",
-    "invalid game id": "invalid game id",
-    "invalid package id": "invalid package id",
-    "invalid request id": "invalid request id",
-    "invalid purchase id": "invalid purchase id",
-    "payment already processed": "payment already processed",
-    "paid successfully": "paid successfully",
-    "payment failed": "payment failed",
-    "page not found": "page not found",
-    "validation failed": "validation failed",
-    "feedback submitted successfully": "feedback submitted successfully",
+    "users": "Users",
+    "not authorized": "Not Authorized",
+    "updated successfully": "Updated Successfully",
+    "error, try again later": "Error, Try Again Later",
+    "user created successfully": "User Created Successfully",
+    "please verify your phone number": "Please Verify Your Phone Number",
+    "invalid username or password": "Invalid Username Or Password",
+    "phone number is not verified": "Phone Number Is Not Verified",
+    "phone number not registered": "Phone Number Not Registered",
+    "phone number verified successfully": "Phone Number Verified Successfully",
+    "phone number is already verified": "Phone Number Is Already Verified",
+    "failed to send otp": "Failed To Send Otp",
+    "verification code has been resent": "Verification Code Has Been Resent",
+    "google login successful": "Google Login Successful",
+    "invalid category id": "Invalid Category Id",
+    "games": "Games",
+    "invalid game id": "Invalid Game Id",
+    "invalid package id": "Invalid Package Id",
+    "invalid request id": "Invalid Request Id",
+    "invalid purchase id": "Invalid Purchase Id",
+    "payment already processed": "Payment Already Processed",
+    "paid successfully": "Paid Successfully",
+    "payment failed": "Payment Failed",
+    "page not found": "Page Not Found",
+    "validation failed": "Validation Failed",
+    "feedback submitted successfully": "Feedback Submitted Successfully",
     "excel file (.xlsx)": "Excel File (.Xlsx)",
     "questions imported successfully": "Questions Imported Successfully",
-    "is active": "is active",
+    "is active": "Is Active",
     "diff": "Years Difference",
     "label": "Label",
     "user info": "User Info",
-    "invalid transaction id": "invalid transaction id",
+    "invalid transaction id": "Invalid Transaction Id",
     "is_active": "Is_Active",
     "upload media": "Upload Media",
     "Question Media": "Question Media",
@@ -175,7 +158,7 @@
     "parentcategorypath": "Parentcategorypath",
     "INITIATED": "Pending",
     "CAPTURED": "Paid",
-    "DECLINED": "DECLINED",
+    "DECLINED": "Declined",
     "CANCELLED": "Cancelled",
-    "delete": "حذف"
+    "delete": "Delete"
 }
